--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "nativewind": "latest",
-    "react-native-reanimated": "~4.1.1",
-    "react-native-worklets": "0.5.1",
-    "react-native-safe-area-context": "~5.6.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@rneui/base": "^4.0.0-rc.8",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@supabase/supabase-js": "^2.75.1",
     "expo": "^54.0.0",
+    "expo-image-picker": "^17.0.8",
     "expo-status-bar": "~3.0.8",
+    "nativewind": "latest",
     "react": "19.1.0",
-    "react-native": "0.81.4"
+    "react-native": "0.81.4",
+    "react-native-dotenv": "^3.4.11",
+    "react-native-reanimated": "~4.1.1",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-worklets": "0.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -26,9 +32,10 @@
     "eslint": "^9.25.1",
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.2",
+    "eslint-import-resolver-alias": "^1.1.2",
     "prettier": "^3.2.5",
-    "tailwindcss": "^3.4.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "tailwindcss": "^3.4.0",
     "typescript": "~5.9.2"
   },
   "main": "node_modules/expo/AppEntry.js",
